--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^24.6.2",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
