--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "types": ["vite/client"],
     "skipLibCheck": true,
+    "jsxImportSource": "react",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
