--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@eslint/js": "^9.36.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.6.2",
